# ShoppingAdvisor-MCP-Server

./: .gitignore  README.md  main.py  pyproject.toml  server.py
src/shopping-advisor/: server.py
src/shopping_advisor/: http_server.py  logging_config.py  oauth.py  server.py
src/shopping_advisor/data/: shopping_malls.json
src/shopping_advisor/utils/: formatter.py  gpt_api.py  product_api.py  prompt_template.py  shopping_mall.py  tool.py
tests/manual_tests/: test_gpt_api.py  test_product_api.py  test_server.py  test_shoppin_mall.py  test_shopping_mall.py  test_tool.py
