[project]
name = "shopping-advisor"
version = "0.1.0"
description = "AI 쇼핑 어드바이저 MCP 서버 - 제품 특징, 쇼핑몰 비교, 구매 가이드 제공"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "openai>=2.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
shopping_advisor = "shopping_advisor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
