[project]
name = "shopping-advisor"
version = "0.1.0"
description = "Smart Shopping Advisor MCP Server - 제품 특징, 쇼핑몰 비교, 구매 가이드 제공"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "openai>=2.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "authlib>=1.3.0",        # OAuth 라이브러리
    "itsdangerous>=2.1.0",   # 세션 관리
]

[project.scripts]
shopping_advisor = "shopping_advisor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
